Добавлена основа кода

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div data-widget="trello">
+    <!--div data-widget="trello">
       <div data-id="col">
         <header>
           <h3>Todo</h3>
@@ -121,7 +121,7 @@
           </form>
         </footer>
       </div>
-    </div>
+    </div-->
   </div>
 </body>
 </html>
